--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
         "autoprefixer": "^10.4.20",
         "axios": "^1.6.4",
         "daisyui": "^4.12.10",
+        "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.47",
+        "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.4.11",
         "vite": "^5.0.0"
     }
